[package]
name = "warqueen"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
# Makes unintentional dropping of `DisconnectionHandle` to panic.
forbid_handle_drop = []

[dependencies]
is_main_thread = "0.1.0"
quinn = "0.11.2"
rcgen = "0.13.1"
rmp-serde = "1.3.0"
rustls = { version = "0.23.9", features = ["ring"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }

[dev-dependencies]
ctrlc = { version = "3.4.4", features = ["termination"] }
rand = { version = "0.8.5" }
