[package]
name = "warqueen"
version = "0.4.5"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Anima <anim.libera@gmail.com>"]
description = "Simple message based networking, non-async and non-blocking"
keywords = ["networking", "gamedev"]
categories = ["network-programming", "game-development"]
readme = "README.md"
repository = "https://github.com/anima-libera/warqueen"
exclude = ["/.vscode", "rustfmt.toml", ".gitignore"]

[features]
default = ["derive"]
# Makes unintentional dropping of `DisconnectionHandle` to panic.
forbid_handle_drop = []
# Provides derive macros for implementing `NetSend` and `NetReceive`.
derive = ["dep:warqueen_derive"]

[dependencies]
is_main_thread = "0.1.0"
quinn = "0.11.2"
rcgen = "0.13.1"
rmp-serde = "1.3.0"
rustls = { version = "0.23.9", features = ["ring"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
#warqueen_derive = { path = "warqueen_derive", optional = true }
warqueen_derive = { version = "0.1.0", optional = true }

[dev-dependencies]
ctrlc = { version = "3.4.4", features = ["termination"] }
rand = { version = "0.8.5" }
