[package]
name = "warqueen_derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Anima <anim.libera@gmail.com>"]
description = "Derive macros for warqueen"
keywords = []
categories = []
readme = "README.md"
repository = "https://github.com/anima-libera/warqueen"
exclude = [".gitignore"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = "2.0.68"

# Used in doc examples.
[dev-dependencies]
serde = { version = "1.0.203", features = ["derive"] }
warqueen = { version = "0.1.0" }
